--- a/app/src/main/res/layout/home_recycler_row.xml
+++ b/app/src/main/res/layout/home_recycler_row.xml
@@ -1,15 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/personName"
-        android:layout_width="wrap_content"
+        android:id="@+id/ReservationStatus"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:text="@string/home_recycler_row_reservation_status" />
+
+    <TextView
+        android:id="@+id/ReservationAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_recycler_row_reservation_address" />
+
+    <TextView
+        android:id="@+id/ReservationLane"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_recycler_row_reservation_lane" />
+
+    <TextView
+        android:id="@+id/ReservationTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_recycler_row_reservation_time" />
+
+    <TextView
+        android:id="@+id/ReservationOther"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/hone_recycler_row_reservation_other" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/Occupy"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#4CAF50"
+            android:text="@string/home_recycler_row_button_occupy"
+            tools:ignore="TextContrastCheck" />
+
+        <Button
+            android:id="@+id/Extend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/home_recycler_row_button_extend"
+            style="?android:attr/buttonBarButtonStyle" />
+
+        <Button
+            android:id="@+id/Cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/home_recycler_row_button_cancel"
+            style="?android:attr/buttonBarButtonStyle" />
+    </LinearLayout>
 
 </LinearLayout>
