--- a/app/src/main/res/layout/home_recycler_occupied_row.xml
+++ b/app/src/main/res/layout/home_recycler_occupied_row.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -43,6 +44,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/ExtendOccupied"
+            app:backgroundTint="@null"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,6 +54,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/EndOccupied"
+            app:backgroundTint="@null"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
